# polymorphic-attention

./: .gitignore  ARBORESCENCE.md  README.md  ROADMAP.md  pyproject.toml
CODE/: README.md
CODE/catalog/: __init__.py  cross_oracle.py  mlflow_logger.py  report.py  run.py
CODE/infra/: __init__.py  machine.py
CODE/livrables/: __init__.py  cross_oracle_synthesis.py  paper_figures.py  partie1_predictions_vs_measured.py  partie1_signatures.py  partie2_asp_verdict.py  run_all.py
CODE/phase1_metrologie/: README.md  report.py  run.py  run_extract.py  sweeps.py
CODE/phase1b_calibration_signal/: README.md  run.py  run_distillability.py
CODE/phase2_audit_spectral/: README.md  checkpoint.py  head_specialization.py  run.py  signal_decoupling.py  stress_rank_map.py  svd_pipeline.py  transfer_law.py
CODE/phase3_kernel_asp/: README.md  asp_layer.py  backbone.py  backbone_concrete.py  checkpoint.py  losses.py  matriochka.py  run_train.py  sanity.py  smart_init.py  soft_mask.py  transformer.py
CODE/phase4_routage_budget/: README.md  curriculum.py  diagram_phase.py  distillation.py  run.py  sparsity_loss.py  spectrometer.py
CODE/phase5_pareto/: README.md  abstract.py  evaluable_wrapper.py  pareto.py  run.py  test_5a_identifiability.py  test_5b_elasticity.py  test_5c_se_ht.py  test_5e_ood.py  test_6c_rmax_half.py
CODE/shared/: aggregation.py  checkpoint.py  logging_helpers.py  mem_guard.py  mlflow_helpers.py  plotting.py  retry.py  runner.py
CODE/sprints/: __init__.py  base.py  run.py  sprint_b_re_extract.py  sprint_c_catalog_full.py  sprint_d_phase3_v3.py  sprint_e_phase4_warmup.py  sprint_f_phase4_autonomous.py  sprint_g_phase5_validation.py  sprint_s4_smnist_extended.py  sprint_s5_vision.py  sprint_s6_code.py  sprint_s7_ll.py
DOC/: 00_FONDATIONS.md  00_vision.md  00b_classification_proprietes.md  00c_predictions_signatures.md  00d_oracles_battery.md  01_phase_metrologie.md  01b_phase_calibration_signal.md  02_phase_audit_spectral.md  03_phase_kernel_asp.md  04_phase_routage_budget.md  05_phase_pareto.md  CATALOGUE.md  CONTEXT.md  INTRODUCTION.md  README.md  carnet_de_bord.md  falsifiabilite.md  glossaire.md
DOC/paper/: README.md  bibliography.bib
DOC/reports/: README.md  phase1_template.md  phase1b_template.md  phase2.md  phase2_template.md  phase3_template.md  phase4_template.md  phase5_template.md
DOC/sprints/: README.md
OPS/: README.md
OPS/configs/: README.md  manifest_template.yaml
OPS/env/: HARDWARE.md  LOGGING.md  POD_CPU_SETUP.md  PRIMITIVES.md  STACK.md  launch_extract.sh  launch_phase1b.sh  launch_phase2.sh  launch_phase3.sh
OPS/logs/: compute_budget.md
OPS/scripts/: bench_cpu_vs_gpu_properties.py  blackwell_env.sh  install_python_deps.sh  install_uv.sh  monitor_run.sh  run_phase1b_skl.sh  setup_env.sh  setup_pod.sh  setup_pod_cpu.sh  start_mlflow_server.sh  start_mlflow_tunnel.sh  validate_primitives.py  verify_torch.sh
OPS/setup/: README.md  (+7 more)
(+310 files in other folders)
